0.0.5_1 (2013-05-24)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Skip tests in Deploy.t when no valid handles available
        - Handle UNION [ALL] statements
        - Sub-query support via the sq() function

    Bug Fixes:
        - Only rollback if error doesn't occur on commit.

0.0.4 (2013-05-20)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - Don't include a blib/ directory in the distribution.

0.0.2 (2013-04-06)

    Initial Release