@@ -10,6 +10,7 @@
         - Skip tests in Deploy.t when no valid handles available
         - Handle UNION [ALL] statements
         - Sub-query support via the sq() function
+        - dump() and xdump() methods for debugging
 
     Bug Fixes:
         - Only rollback if error doesn't occur on commit.
